--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
         <body>
                 <h1>
-                        heyo
+                        hiya
                 </h1>
         </body>
 </html>
