--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <html>
+        <head>
+            <style>
+                body {
+                    background-color: rgb(47, 31, 0);
+                    color: grey;
+                }
+            </style>
+        </head>
+
         <body>
                 <h1>
                         hiya
