--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html>
         <head>
             <style>
+                @font-face {
+                    font-family: Comic;
+                    src: url(ComicNeue-Regular.woff2);
+                }
                 body {
                     background-color: rgb(47, 31, 0);
                     color: grey;
+                    font-family: Comic;
                 }
             </style>
         </head>
 
         <body>
                 <h1>
-                        hiya
+                        Hiya!!!!
                 </h1>
         </body>
 </html>
