dark mode & faves

--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!doctype html>
 <html>
         <head>
+            <title>
+                Wizard Home
+            </title>
+
+            <link rel = "icon" href = "/favicon.ico" sizes = "any">
+            <link rel = "icon" href = "/icon.svg" type = "image/svg+xml">
+            <link rel = "apple-touch-icon" href = "/apple-touch-icon.png">
+            <link rel = "manifest" href = "/manifest.json">
+
             <style>
                 @font-face {
                     font-family: Comic;
                     src: url(ComicNeue-Regular.woff2);
-                }
+                }|
                 body {
                     background-color: rgb(47, 31, 0);
                     color: grey;
                     font-family: Comic;
                 }
+                @media (prefers-color-scheme: light) {
+                    body {
+                        background-color: rgb(255, 240, 200);
+                        color: rgb(87, 96, 173);
+                        font-family: Comic;
+                    }
+                }
             </style>
         </head>
-
         <body>
                 <h1>
                         Hiya!!!!
