CSS and a whole bunch of others

--- a/index.html
+++ b/index.html
@@ -1,37 +1,72 @@
 <!doctype html>
 <html>
-        <head>
-            <title>
-                Wizard Home
-            </title>
+	<head>
+		<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width">
+			<title>
+				Wizard Home
+			</title>
+			<link rel = "stylesheet"        href = "style.css"              type = "text/css" >
+			<link rel = "shortcut icon"     href = "favicon.ico"            type = "image/x-icon">
+			<link rel = "icon"              href = "/favicon.ico"           sizes = "any">
+			<link rel = "apple-touch-icon"  href = "/apple-touch-icon.png">
+			<link rel = "manifest"          href = "/manifest.json">
+	</head>
 
-            <link rel = "icon" href = "/favicon.ico" sizes = "any">
-            <link rel = "icon" href = "/icon.svg" type = "image/svg+xml">
-            <link rel = "apple-touch-icon" href = "/apple-touch-icon.png">
-            <link rel = "manifest" href = "/manifest.json">
+	<body>
+		<div class = "topBar"> 
+			Hiya!!!!
+		</div>
+		Here are some projects.
+		<div class="projectList">
+			 <ul>
+				<li>
+					<div class = "shadow">
+						<img src = "Roy.svg" alt = "Roy - a purple fish logo">
+					</div>
+					<p>
+						Roy
+					</p>
+				</li>
+				<li>
+					<div class = "shadow">
+						<img src = "Frank.svg" alt = "Frank - a green snake logo">
+					</div>
+					<p>
+						Frank
+					</p>
+				</li>
+				<li>
+					<div class = "shadow">
+						<img src = "Mine Terminator.svg" alt = "Mine terminator logo - a stick of synamite in the comand line">
+					</div>
+					<p>
+						Mine Terminator
+					</p>
+				</li>
+				<li>
+					<div class = "shadow">
+						<img src = "Zenith.svg" alt = "Zenith logo - a glimpse of Sputnik over the globe">
+					</div>
+					<p>
+						Zenith
+					</p>
+				</li>
+			</ul>
+		</div>
 
-            <style>
-                @font-face {
-                    font-family: Comic;
-                    src: url(ComicNeue-Regular.woff2);
-                }|
-                body {
-                    background-color: rgb(47, 31, 0);
-                    color: grey;
-                    font-family: Comic;
-                }
-                @media (prefers-color-scheme: light) {
-                    body {
-                        background-color: rgb(255, 240, 200);
-                        color: rgb(87, 96, 173);
-                        font-family: Comic;
-                    }
-                }
-            </style>
-        </head>
-        <body>
-                <h1>
-                        Hiya!!!!
-                </h1>
-        </body>
+		<div class = "contactBar">
+			<ul>
+				<li>
+					<a href="">
+						email
+					</a>
+				</li>
+				<li>
+					<a href="">
+						github
+					</a>
+				</li>
+		</div>
+	</body>
 </html>
