top/bottom bars

--- a/index.html
+++ b/index.html
@@ -14,59 +14,81 @@
 	</head>
 
 	<body>
-		<div class = "topBar"> 
+		<header>
+			<img src="icon.svg" alt="The wizard hat logo">
+			<nav>
+				<ul>
+					<li>
+						<a href="#"> projects </a>
+					</li>
+					<li>
+						<a href="#"> blog </a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<p style="margin: 60px; font-size: 60px;"> 
 			Hiya!!!!
-		</div>
-		Here are some projects.
+		</p>
+		<p style="padding: 20px; font-size: 40px">
+			I'm Alex, CS student at Trinity College Dublin. Here are some of my projects!
+		</p>
 		<div class="projectList">
 			 <ul>
 				<li>
-					<div class = "shadow">
-						<img src = "Roy.svg" alt = "Roy - a purple fish logo">
-					</div>
-					<p>
+					<a href = "Roy/index.html">
+						<div class = "shadow">
+							<img src = "Roy.svg" alt = "Roy - a purple fish logo">
+						</div>
+					</a>
+					<div class = "projectName">
 						Roy
-					</p>
+					</div>
+
 				</li>
 				<li>
 					<div class = "shadow">
 						<img src = "Frank.svg" alt = "Frank - a green snake logo">
 					</div>
-					<p>
+					<div class = "projectName">
 						Frank
-					</p>
+					</div>
 				</li>
 				<li>
 					<div class = "shadow">
 						<img src = "Mine Terminator.svg" alt = "Mine terminator logo - a stick of synamite in the comand line">
 					</div>
-					<p>
+					<div class = "projectName">
 						Mine Terminator
-					</p>
+					</div>
 				</li>
 				<li>
 					<div class = "shadow">
-						<img src = "Zenith.svg" alt = "Zenith logo - a glimpse of Sputnik over the globe">
+						<a href="https://pdimplex.netsoc.ie/Zenith/index.html">
+							<img src = "Zenith.svg" alt = "Zenith logo - a glimpse of Sputnik over the globe">
+						</a>
 					</div>
-					<p>
+					<div class = "projectName">
 						Zenith
-					</p>
+					</div>
 				</li>
 			</ul>
 		</div>
+		<footer>
+			<div class = "contactBar">
+				<ul>
+					<li>
+						<a href="mailto:alex.mitr@icloud.com">
 
-		<div class = "contactBar">
-			<ul>
-				<li>
-					<a href="">
-						email
-					</a>
-				</li>
-				<li>
-					<a href="">
-						github
-					</a>
-				</li>
-		</div>
+							email
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/theSecondBlueWizard">
+							github
+						</a>
+					</li>
+			</div>
+		</footer>
 	</body>
 </html>
