A bunch of progress!

--- a/Roy/index.html
+++ b/Roy/index.html
@@ -14,6 +14,45 @@
 			<link rel = "manifest"          href = "/./manifest.json">
 	</head>
 	<body>
-        Roy is under active development!
+		<header>
+			<a href="/./index.html">
+				<img src="/./icon.svg" alt="The wizard hat logo">
+			</a>
+			<nav>
+				<ul>
+					<li>
+						<a href="#"> projects </a>
+					</li>
+					<li>
+						<a href="#"> blog </a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<p style="margin: 60px; font-size: 60px;"> 
+			Roy:
+		</p>
+		<div class="projectList">
+			<div class="projectName">
+				An iOS tool for looking up and comparing paints, html and historic colours.
+			</div>
+		</div>
+
+		<div class="projectList">
+			<img src="/./IMG_0528.PNG" alt="" style="max-width: 50vw; max-height: 50vh; margin: 10px; border-radius: 10px;">
+			<img src="/./IMG_0529.jpg" alt="" style="max-width: 50vw; max-height: 50vh; margin: 10px; border-radius: 10px;">
+		</div>
+
+		<div class="projectList">
+			<div class="projectName">
+				Written in SwiftUI and SQLite
+			</div>
+		</div>
+
+		<div class="projectList">
+			<div class="projectName">
+				Set for release in late May 2022
+			</div>
+		</div>
     </body>
 </html>
