finished home page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="#"> projects </a>
+						<a href="#zenith"> projects </a>
 					</li>
 					<li>
-						<a href="#"> blog </a>
+						<a href="/blog/index.html"> blog </a>
 					</li>
 				</ul>
 			</nav>
@@ -94,11 +94,19 @@
 				</li>
 			</ul>
 		</div>
+		<ul class="leftright">
+			<li>
+				<a href="#roy"> < </a>
+			</li>
+			<li>
+				<a href="#zenith"> > </a>
+			</li>
+		</ul>
 		
 		<p style="padding: 20px; font-size: 40px">
-			General experience includes: Java, Python, Swift, HTML and CSS. I'd love to
+			General experience includes: Java, Python, Swift, HTML and CSS
 			<br><br>
-			I'm looking for internships or summer jobs. If anything comes up, please reach out!
+			I'm looking for internships or summer jobs. If anything comes up, please do reach out!
 			<br><br>
 		</p>
 
