trying to remove index.html from url

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<a href="#zenith"> projects </a>
 					</li>
 					<li>
-						<a href="/blog/index.html"> blog </a>
+						<a href="/blog/"> blog </a>
 					</li>
 				</ul>
 			</nav>
@@ -43,7 +43,7 @@
 		<div class="projectList">
 			 <ul id="listOfProjects">
 				<li>
-					<a href = "Roy/index.html">
+					<a href = "Roy/">
 						<div class = "shadow">
 							<img src = "Roy.svg" alt = "Roy - a purple fish logo">
 						</div>
