--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="#zenith"> projects </a>
+						<a href="#zenith"> about </a>
 					</li>
 					<li>
 						<a href="/blog/"> blog </a>
@@ -37,7 +37,9 @@
 						I'm Alex, CS student at Trinity College Dublin. Here are some of my projects!
 					</p>
 				</li>
-
+				<li>
+					<img src="Geometric selfie temp.svg" alt="selfie traced as vector art with the sole purpose of being kinda impressive">
+				</li>
 			</ul>
 		</div>
 		<div class="projectList">
@@ -52,7 +54,7 @@
 						Roy
 					</div>
 					<div class="projectDescription" id="roy">
-						A colour lookup tools designed for artists and designers set to release in late May 2022
+						A colour lookup tool for shades of paints and web set to release in late May 2022
 					</div>
 				</li>
 				<li>
