Final one, i swear. Goodnight!

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 						Hiya!!!!
 					</p>
 					<p style="padding: 20px; font-size: 40px">
-						I'm Alex, CS student at Trinity College Dublin. Here are some of my projects!
+						I'm Alex, CS student at
+						<a href="https://www.tcd.ie/">Trinity College Dublin.</a>
+						Here are some of my projects!
 					</p>
 				</li>
 				<li>
