--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						Frank
 					</div>
 					<div class="projectDescription" id="frank">
-						A text editor width no state preservation because quite frankly, sometimes that's all you need. September 2022
+						A text editor with no state preservation, because quite frankly, sometimes that's all you need. September 2022
 					</div>
 				</li>
 				<li>
