--- a/Roy/index.html
+++ b/Roy/index.html
@@ -21,7 +21,7 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="#"> about </a>
+						<a href="#"> projects </a>
 					</li>
 					<li>
 						<a href="#"> blog </a>
