--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="#zenith"> about </a>
+						<a href="#zenith"> projects </a>
 					</li>
 					<li>
 						<a href="/blog/"> blog </a>
@@ -30,17 +30,20 @@
 		<div class="me">
 			<ul>
 				<li>
-					<p style="margin: 60px; font-size: 60px;"> 
-						Hiya!!!!
-					</p>
-					<p style="padding: 20px; font-size: 40px">
+					<h1>
+					&emsp; Hiya!!!!
+					</h1>
+					<h2>
 						I'm Alex, CS student at
 						<a href="https://www.tcd.ie/">Trinity College Dublin.</a>
 						Here are some of my projects!
-					</p>
+					</h2>
 				</li>
 				<li>
-					<img src="Geometric selfie temp.svg" alt="selfie traced as vector art with the sole purpose of being kinda impressive">
+					<svg>
+						src="Geometric selfie.svg"
+					</svg>
+					<img src="Geometric selfie.svg" alt="selfie traced as vector art with the sole purpose of being kinda impressive">
 				</li>
 			</ul>
 		</div>
